[package]
name = "Filer"
version = "0.0.1"
authors = ["shavz <shiveen.pandita@growsuper.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rust-s3 = "0.15.0"
walkdir = "2"
clap = { version = "2.32.0", features = ["yaml"] }
human-panic = "1.0.1"
